--- a/src/test/resources/serenity.conf
+++ b/src/test/resources/serenity.conf
@@ -6,15 +6,15 @@
 
 environments {
   default {
-    webdriver.base.url = "https://duckduckgo.com"
+    base.url = "http://ovc.catastro.meh.es"
   }
   dev {
-    webdriver.base.url = "https://duckduckgo.com/dev"
+    base.url = "http://ovc.catastro.meh.es"
   }
   staging {
-    webdriver.base.url = "https://duckduckgo.com/staging"
+    base.url = "http://ovc.catastro.meh.es"
   }
   prod {
-    webdriver.base.url = "https://duckduckgo.com/prod"
+    base.url = "http://ovc.catastro.meh.es"
   }
 }
